fix a small z-index issue on show pages [ci skip]

--- a/app/assets/stylesheets/new_styles/_post_viewer.scss
+++ b/app/assets/stylesheets/new_styles/_post_viewer.scss
@@ -44,6 +44,7 @@
   .current-frame {
     @include wide();
     vertical-align : middle;
+    z-index: 0;
   }
 
   i.divider {
